debug/argocd/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argocd
spec:
  host: argocd.apps.crc.testing
  tls:
    termination: passthrough
  to:
    kind: Service
    name: argocd-server
